# plugin-analyser

./: .clang-format  .gitignore  .pre-commit-config.yaml  BUILD_NOTES.md  CMakeLists.txt  CONTRIBUTING.md  Makefile  README.md  analyze_results.py  example_config.json  quick_param_test.sh  run_measurements.sh  test_list_params.cpp  test_params.sh  test_plugin_load.cpp  test_plugin_simple.sh
.github/workflows/: ci.yml
assets/: README.txt
src/: Analyzer.h  BlockContext.h  BucketSpec.cpp  BucketSpec.h  Config.cpp  Config.h  JuceHeader.h  LinearResponseAnalyzer.cpp  LinearResponseAnalyzer.h  MainComponent.cpp  MainComponent.h  MainWindow.cpp  MainWindow.h  MeasurementConfigComponent.cpp  MeasurementConfigComponent.h  MeasurementEngine.cpp  MeasurementEngine.h  ParameterConfigComponent.cpp  ParameterConfigComponent.h  ParameterInspectionDialog.cpp  ParameterInspectionDialog.h  PluginLoader.cpp  PluginLoader.h  RawCsvAnalyzer.cpp  RawCsvAnalyzer.h  RmsPeakAnalyzer.cpp  RmsPeakAnalyzer.h  RunConfig.h  SignalGenerator.cpp  SignalGenerator.h  ThdAnalyzer.cpp  ThdAnalyzer.h  TransferCurveAnalyzer.cpp  TransferCurveAnalyzer.h  inspect_plugin.cpp  main.cpp  main_cli.cpp
temp_configs/: config_sine.json
